tests/error/private_other.gw
#! [contains] invalid variable access
class C { var private int i;  }

class D {
  var C c;
  <<< c.i >>>;
}
